# srr

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: ci.yml
srr/: Cargo.toml  readme.md
srr/src/: blocks.rs  lib.rs
srr/tests/: Bobs.Burgers.S02E08.720p.HDTV.X264-DIMENSION.srr  Britney_Spears-Stronger-DVDRip-IVTC-SVCD-cHiPs-mVz.srr  DJ_Melvin-L.O.I.S.-CDM-2002-TGX.srr  Harry.Potter.And.The.Chamber.Of.Secrets.2002.DVDRip.XViD-iNTERNAL-TDF.srr  N.O.R.E._-_Nothin-(CDS)-2002-SC.srr  Shanghai.Surprise.1986.FS.iNTERNAL.DVDRip.x264-REGRET.srr  Thickos.scen0r.zine.Issue.01-THiCK0S.srr  pyrescene.rs
srr/tests/pyrescene_test_files/store_rr_solid_auth_unicode_new/: store_rr_solid_auth.sfv
srr/tests/pyrescene_test_files/store_split_folder_old_srrsfv_windows/: store_split_folder.sfv
srrdb/: Cargo.toml  readme.md
srrdb/src/: lib.rs
