[package]
name = "srrdb"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.31", default-features = false }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tower-service = "0.3.3"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "test-util"] }
